# talent_manager

./: .env.example  .gitignore  Dockerfile  README.md  autonomous_config.json  celery_app.py  cleanup_alex.py  cleanup_alex.py.backup  cli.py  cli.py.backup  dalle_video_setup.py  debug_server_script.py  diagnostic.py.backup  docker-compose.yml  e2e_test_suite.py  fix_alex_imports.py  fix_alex_imports.py.backup  fix_script_cleaner.py  fix_script_cleaner_targeted.py  fix_service.sh  fix_video_creator_no_moviepy.py  fix_video_creator_syntax.py  improve_script_cleaner.py  integrate_services.py  main.py  main.py.backup  main.py.backup2  manual_test_script.py  production_readiness_validation.py  pyproject.toml  quick_validation_test.py  replace_alex_file.py  requirements.txt  run_alex_automation.py  run_e2e_tests.py  script_54.txt  secure_youtube_auth.py  setup.sh  setup_autonomous.py  simple_auth.py  (+10 more)
core/: api.py
core/autonomous/: talent_orchestrator.py
core/database/: __init__.py  config.py  models.py
core/pipeline/: content_pipeline.py  content_pipeline.py.backup  content_pipeline.py.backup2  enhanced_content_pipeline.py  enhanced_content_pipeline.py.backup  enhanced_content_pipeline.py.broken  enhanced_content_pipeline_simple.py
core/research/: autonomous_researcher.py
core/strategy/: __init__.py  autonomous_strategy.py
core/task/: analytics_tasks.py  content_tasks.py  maintenance_tasks.py
core/tasks/: content_tasks.py
talents/education_specialist/: alex_codemaster.py
talents/tech_educator/: __init__.py  alex_codemaster.py  alex_codemaster.py.original_backup  api.py  cli.py  (+3 more)
tests/: test_basic.py
